--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
+*{
+    scroll-behavior: smooth;
+}
+
 body{
     margin:0;
-    padding:0;
-    
+   
 }
 header{
     display:flex;
     justify-content: space-between;
-    background-color:beige;
+    background-color:black;
     padding:10px;
     align-items:center;
     position:sticky;
     top:0;
+    color: white;
     
 
 }
@@ -28,7 +32,7 @@ nav ul li{
 }
 nav ul li a{
     text-decoration: none;
-    color:black;
+    color:white;
     
 }
 div{
@@ -44,16 +48,17 @@ div{
     height:400px;
     text-align:left;
     justify-content: space-between;
-    display:flex
-  
+    display:flex;
+    
 }
   
 .btn{
     height:50px;
-    background-color: beige;
+    background-color:black;
     border-radius:20px;
     object-fit: cover;
-    dispaly:flex
+    color:white;
+    
    
     
     
@@ -61,7 +66,7 @@ div{
 .hed{
     margin-top:100px;
     text-align:justify;
-    font-size:x-large;
+    font-size:25px;
 }
 .me img{
     justify-content: space-between;
@@ -80,4 +85,65 @@ div{
 .hero div{
     font-weight: normal;
     all:unset;
+    
+}
+.about{
+    padding:20px;
+   font-size: x-large;
+   background-color: beige;
+   text-align: justify;
+}
+
+
+.exper{
+    all:unset;
+    justify-content: space-between;
+    display: flex;
+    text-align:justify
+}
+#experience{
+    text-orientation: right;
+}
+.services{
+    display:flex;
+    padding:20px;
+    gap:2px;
+    flex-direction:column;
+    background-color: beige;
+    font-size: x-large;
+    
+   
+}
+.cards{
+    all:unset;
+    background:#ffd700;
+    border-radius:20px;
+    padding:10px;
+   justify-content: space-between;
+    width:60%;
+    height:60%;  
+    margin-top:20px;
+    font-size: x-large;
+
+}
+.skills{
+    font-size: x-large;
+    background-color: beige;
+    padding:10px;
+    object-fit:cover ;
+}
+.contact{
+    font-size: x-large;
+    background-color: beige;
+    padding:10px;
+}
+.footer{
+    background-color:black;
+    text-align: center;
+    padding: 1px;
+    color:white;
+}
+footer a img{
+    margin:10px;
+    
 }
