--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -53,6 +53,16 @@ nav ul li a{
 text-align:center;
 padding:20px;
 }
+.form input
+.form textarea{
+    width:100%;
+    outline:none;
+    gap:15%;
+    display:flex;flex-direction:row;
+
+
+    
+}
 
   
 
